testsuite/tests/properties/invalid_at/test.out
== bad_arg_type.lkt ==
bad_arg_type.lkt:4:54: error: Expected type Int, got Bool
4 |     @exported fun bar_prop(): Int = node.singleton()[true]
  |                                                      ^^^^


== correct.lkt ==
Code generation was successful

== kwargs.lkt ==
kwargs.lkt:4:59: error: Expected ']', got '='
4 |     @exported fun bar_prop(): Int = node.singleton()[index=12]
  |                                                           ^


== no_arg.lkt ==
no_arg.lkt:4:54: error: Expected '[', got ']'
4 |     @exported fun bar_prop(): Int = node.singleton()[]
  |                                                      ^


== too_many_args.lkt ==
too_many_args.lkt:4:55: error: Expected ']', got ','
4 |     @exported fun bar_prop(): Int = node.singleton()[0, 12]
  |                                                       ^


lkt_compile: Done
